--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.10"
+    "react-router-dom": "^6.15.0",
+    "sort-by": "^0.0.2",
+    "styled-components": "^5.3.10",
+    "styled-reset": "^4.5.1",
+    "vite-jsconfig-paths": "^2.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
